Fix overlapping unit on subnav

--- a/themes/bthree/assets/css/less/bthree.less
+++ b/themes/bthree/assets/css/less/bthree.less
@@ -10,7 +10,7 @@
 @import 'generic_page.css';
 
 /* Specific CSS */ 
- 
+  
 @media(max-width:767px){
   .sitemap .span3{
     float:left;
@@ -29,9 +29,8 @@
   background-size: 123px 36px;
   top: -2px;
 }
-.hero-unit{
+.frontpage.hero-unit{
     margin: -32px auto 30px auto;
-    clear:both;
 }
 
 /* Carousel base class */
