--- a/themes/bthree/assets/css/less/header.less
+++ b/themes/bthree/assets/css/less/header.less
@@ -106,6 +106,7 @@
 .third_level {
   width: 100%;
   text-transform: capitalize;
+  clear:both;
 }
 
 .second_level{background-color: darken(@color_background, 3%);}
