--- a/themes/bthree/assets/css/less/hero_unit.less
+++ b/themes/bthree/assets/css/less/hero_unit.less
@@ -1,8 +1,7 @@
 @import 'defines.less'; // Always import defines
 /* HERO UNIT */
 .hero-unit {
-  padding: 0;
-  margin: -31px 0 20px 0;
+  padding: 0; 
   font-size: 130%;
   line-height: 120%;
   background-color: @color_background;
@@ -10,6 +9,7 @@
   border-bottom: 3px solid darken(@color_background, 10%);
   background-image: url(../images/frontpage_unit.jpg);
   background-size: cover;
+  clear:both;
 }
 
 .hero-unit h3 {
